--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,8 @@
 <h1>id: <%= @task.id %> のメッセージ詳細</h1>
 
-<p> <%= @task.content %> </p>
+<p>ステータス: <%= @task.status %></p>
+
+<p>タスク内容: <%= @task.content %> </p>
 
 <%= link_to '一覧に戻る', tasks_path %>
 <!-- tasks_path = / -->
