--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,13 +1,18 @@
+<div class='row'>
+  <div class='col-xs-12'>
+    <div class='col-sm-8'>
+      <div class='col-lg-y6'>
+
 <%= form_for(task) do |f| %>
 
 <% if task.errors.any? %>
 
 <div id='error_explanation' >
     <ul>
-      <% task.errors.full_messages.each do |task| %>
+<% task.errors.full_messages.each do |task| %>
       
       <li>
-        <%= task %>
+<%= task %>
       </li>
       
       <% end %>
@@ -16,14 +21,23 @@
 
 <% end %>
 
+  <div class='from-group'>
 <%= f.label :status, 'ステータス' %>
+  
+<%= f.text_field :status, class: 'form-control' %>
+  </div>
 
-<%= f.text_field :status %>
-
+  <div class='from-group'>
 <%= f.label :content, 'タスクの内容' %>
+  
+<%= f.text_field :content, class: 'form-control' %>
+  </div>
 
-<%= f.text_field :content %>
 
-<%= f.submit '投稿' %>
+<%= f.submit '投稿', class: 'btn btn-primary' %>
 
 <% end %>
+      </div>
+    </div>
+  </div>
+</div>
