--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,5 @@
 <div class='row'>
-  <div class='col-xs-12'>
-    <div class='col-sm-8'>
-      <div class='col-lg-y6'>
+  <div class='col-xs-12 col-sm-8 col-lg-y6 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6'>
 
 <%= form_for(task) do |f| %>
 
@@ -37,7 +35,5 @@
 <%= f.submit '投稿', class: 'btn btn-primary' %>
 
 <% end %>
-      </div>
-    </div>
   </div>
 </div>
