--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,18 +8,42 @@
           <span class='icon-bar'></span>
           <span class='icon-bar'></span>
         </button>
-        <a class='navbar-brand' href ='/'>Taskl list</a>
+        <a class='navbar-brand' href ='/'>Task list</a>
       </div>
+      
+      
       <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
         
         <ul class='nav navbar-nav navbar-right'>
-          <li>
-            <%= link_to 'Sign up', signup_path %>
+          
+<% if logged_in? %>
+          
+          <li class='dropdown'>
+            <a href='#' class='dropdown-toggle' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
+<%= current_user.name %>
+              <span class='caret'></span></a>
+              <ul class='dropdown-menu'>
+                <li>
+<%= link_to '新規タスクの投稿', new_task_path %>
+                </li>
+                <li role='separator' class='divider'></li>
+                <li>
+<%= link_to 'Logout', logout_path, method: :delete %>
+                </li>
+              </ul>
           </li>
-          <li><a href='#'>Login</a></li>
+          
+<% else %>
+          
           <li>
-            <%= link_to '新規タスクの投稿', new_task_path %>
+<%= link_to 'Sign up', signup_path %>
           </li>
+          <li>
+<%= link_to 'Login' , login_path %>
+          </li>
+          
+<% end %>
+          
         </ul>
         
       </div>
