--- a/app/views/tasks/_index.html.1.erb
+++ b/app/views/tasks/_index.html.1.erb
@@ -1,8 +1,8 @@
-<h1>メッセージ一覧</h1>
+<h1>課題一覧</h1>
 
 <ul>
   
-  <% @tasks.each do |task| %>
+  <% tasks.each do |task| %>
     
   <li>
     <%= link_to task.id, task %>
