--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,7 +4,7 @@
 
 <p>タスク内容: <%= @task.content %> </p>
 
-<%= link_to '一覧に戻る', tasks_path %>
+<%= link_to '一覧に戻る', root_url %>
 <!-- tasks_path = / -->
 
 <%= link_to '編集する', edit_task_path(@task) %>
