--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,8 +1,44 @@
-<div class='center jumbotron'>
-  <div class='text-center'>
-    <h1>Welcome to your Tasklist</h1>
+<% if logged_in? %>
+
+  <div class='row'>
     
-    <%= link_to 'Sign up now!' , signup_path, class: 'btn btn-lg btn-primary' %>
+    <aside class='col-md-4'>
+<%= form_for(@task) do |f| %>
+    
+    <div class='form-group'>
+<%= f.label :status, 'ステータス' %>
+<%= f.text_field :status, class: 'form-control' %>
+    </div>
+    
+    
+  <div class='from-group'>
+<%= f.label :content, 'タスクの内容' %>
+<%= f.text_field :content, class: 'form-control' %>
+  </div>
+
+    
+<%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
+    
+<% end %>  
+    </aside>
+    
+    <div class='col-xs-8'>
+<%= render 'tasks/tasks', tasks: @tasks %>
+    </div>
     
   </div>
-</div>
+  
+  
+<% else %>
+    
+  <div class='center jumbotron'>
+    <div class='text-center'>
+      <h1>Welcome to your Tasklist</h1>
+    
+<%= link_to 'Sign up now!' , signup_path, class: 'btn btn-lg btn-primary' %>
+    
+    </div>
+   </div>
+
+<% end %>
+
