--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -19,13 +19,13 @@
 
 <% end %>
 
-  <div class='from-group'>
+  <div class='form-group'>
 <%= f.label :status, 'ステータス' %>
   
 <%= f.text_field :status, class: 'form-control' %>
   </div>
 
-  <div class='from-group'>
+  <div class='form-group'>
 <%= f.label :content, 'タスクの内容' %>
   
 <%= f.text_field :content, class: 'form-control' %>
