--- a/app/views/layouts/_flash_tasks.html.erb
+++ b/app/views/layouts/_flash_tasks.html.erb
@@ -1,7 +1,9 @@
 <% flash.each do |task_type, task| %>
 
-<div class='alert alert-<%= task_type %>'>
- <%= task %> </div> 
+<div class='alert alert-
+<%= task_type %>
+'>
+ <%= task %>
 </div>
 
 <% end %>
