--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -11,7 +11,7 @@
     </div>
     
     
-  <div class='from-group'>
+  <div class='form-group'>
 <%= f.label :content, 'タスクの内容' %>
 <%= f.text_field :content, class: 'form-control' %>
   </div>
