--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,7 +7,7 @@
 <%= link_to '一覧に戻る', root_url %>
 <!-- tasks_path = / -->
 
-<% if current_user == task.user %>
+<% if current_user == @task.user %>
 
 <%= link_to '編集する', edit_task_path(@task) %>
 
