for heroku after modify

--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -32,7 +32,7 @@
   
   
 <% else %>
-    
+<% else %>    
   <div class='center jumbotron'>
     <div class='text-center'>
       <h1>Welcome to your Tasklist</h1>
